--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -744,3 +744,12 @@
     color: white !important;
   }
 }
+
+:root {
+  --font-montserrat: 'Montserrat', sans-serif;
+}
+
+body {
+  font-family: var(--font-montserrat);
+}
+
